visualization added, seems to work

--- a/server/index.html
+++ b/server/index.html
@@ -4,6 +4,7 @@
     <title>Multilayer Perceptron</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="css/chart.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <div class="container">
@@ -20,17 +21,17 @@
         </div>
         <div class="span9">
             <h2>Graphs</h2>
-            <p id="networkData">
-            </p>
+            <div id="chartContainer">
+            </div>
         </div>
     </div>
 
-    </div>
 </div>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/index.js"></script>
-
+<script src="js/chart.js"></script>
+<script src="http://d3js.org/d3.v2.js"></script>
 </body>
 </html>
