--- a/server/index.html
+++ b/server/index.html
@@ -57,6 +57,9 @@
             <!--<h2>Graphs</h2>-->
             <div id="chartContainer">
             </div>
+
+            <div id="dataChartContainer">
+            </div>
         </div>
     </div>
 
