--- a/server/index.html
+++ b/server/index.html
@@ -5,6 +5,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/chart.css" rel="stylesheet" media="screen">
+    <link href="css/main.css" rel="stylesheet" media="screen">
     <style>
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -16,11 +17,12 @@
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <ul class="nav">
+            <ul class="nav tabNavigation">
                 <li>
                     <a class="brand" href="#">Multilayer Perceptron</a>
                 </li>
-                <li class="active"><a href="#">Learning curves</a></li>
+                <li class="active tabSelector"><a href="#chartContainer">Learning curves</a></li>
+                <li class="tabSelector"><a href="#dataChartContainer">Data visualization</a></li>
             </ul>
         </div>
     </div>
@@ -42,7 +44,7 @@
                 <p id="networkName">
 
                 </p>
-                <label for="networkDescription"><h4>Description</h4></label>
+                <h4>Description</h4>
                 <p id="networkDescription">
 
                 </p>
@@ -53,8 +55,7 @@
             </div>
 
         </div>
-        <div class="span9">
-            <!--<h2>Graphs</h2>-->
+        <div class="span9 tabsContainer">
             <div id="chartContainer">
             </div>
 
@@ -66,6 +67,8 @@
 </div>
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+
 <script src="js/bootstrap.min.js"></script>
 <script src="js/index.js"></script>
 <script src="js/chart.js"></script>
