--- a/server/index.html
+++ b/server/index.html
@@ -66,8 +66,12 @@
 
 </div>
 
-<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+<!--<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>-->
+
+<script src="/js/lib/d3.v2.min.js"></script>
+<script src="/js/lib/jquery-1.8.3.js"></script>
+<script src="/js/lib/jquery-ui-1.9.2.js"></script>
 
 <script src="js/bootstrap.min.js"></script>
 <script src="js/index.js"></script>
