--- a/server/index.html
+++ b/server/index.html
@@ -67,7 +67,8 @@
 </div>
 
 <!--<script src="http://code.jquery.com/jquery-latest.js"></script>
-<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>-->
+<script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+<script src="http://d3js.org/d3.v2.js"></script>-->
 
 <script src="/js/lib/d3.v2.min.js"></script>
 <script src="/js/lib/jquery-1.8.3.js"></script>
@@ -76,6 +77,5 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="js/index.js"></script>
 <script src="js/chart.js"></script>
-<script src="http://d3js.org/d3.v2.js"></script>
 </body>
 </html>
